2005-02-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: don't use open with three args, use binmode (for
	old perl).
	* doc/Makefile.am: rebuild the manual based on the sources, not 
	on the script, as it is remade by ./configure. Use the rebuild
	of the manual as a check target (ideas from Derek).
	* Tests/*: test for results with USE_UNICODE set to 0.

2005-02-01  Derek Price  <derek@ximbiot.com>

	* configure.ac: Revert most of the PERL change.

2005-02-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init, examples/chm.init: remove our keywords for old
	perl.

2005-02-01  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Include missing-texi2html.

2005-02-01  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that Perl is no longer required to build.
	* configure.ac: Don't search for texinfo programs handled by Automake.
	Declare PERL a precious var.  Exit when not found and not set.  Warn
	when set to a relative path.
	* missing-texi2html, doc/texi2html.html: New files.
	* doc/.cvsignore: Add more intermediate files.
	* doc/Makefile.am: Remove targets autogenerated by Automake.
	(EXTRA_DIST): Distribute texi2html.html.
	(texi2html.html): Call texi2html via missing-texi2html.

2005-01-31  Derek Price  <derek@ximbiot.com>

	* configure.in, NEWS: Update for development.
	* configure.in: Rename to...
	* configure.ac: ...this, to match current Autoconf standards.

2005-01-31  Derek Price  <derek@ximbiot.com>

	* configure.in, NEWS: Update for the 1.74 release.

2005-01-16  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: more robust handling of deffn lines.
	The argument may be in bracket, therefore there is no difference
	beteen arg and other item specification for def like commands.
	* Tests: test for more deffn lines, and for @-commands in floats.
	* doc/texi2html.texi: update.

2005-01-16  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: close quotes within html elements. Apply commands