@@ -1,4 +1,4 @@
-@set UPDATED 31 January 2005
-@set UPDATED-MONTH January 2005
+@set UPDATED 1 February 2005
+@set UPDATED-MONTH February 2005
 @set EDITION 1.75
 @set VERSION 1.75
